--- a/TODO
+++ b/TODO
@@ -107,13 +107,15 @@ DOCS:
 
 Stefan Gui TODOs (priorities: 9=high, 0=low):
 4 - implement selection and copy and paste in the song view
-8 - closing the BEAST window should ask (close/save/abort) if modified changes are
+8 - closing the BEAST window should ask (close/save/abort) if unsaved changes are
+    in the project
 6 - file open on an unmodified project should not open a new project window but
     reuse the existing one
 3 - make appropriate borders for notes in piano roll view (two consecutive same pitch notes
     should be distinguishable)
 7 - file->save as should change the file name in the title bar
 5 - implement copying of parts
+2 - Comment field in Project -> SNet is too small to enter reasonable
 
 TODO:
 - virtual MIDI keyboard
