--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sat Oct 18 01:01:14 2003  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* library/demo/Makefile.am library/demo/partymonster.bse: Added the
+	"Party Monster" demo song.
+
 Fri Oct 17 22:25:00 2003  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* shell/bse-scm-glue.boot: Defined bse-param-song.
