--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sat Oct 18 04:59:23 2003  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* library/demo/partymonster.bse: More work on song: use compression.
+
 Sat Oct 18 01:01:14 2003  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* library/demo/Makefile.am library/demo/partymonster.bse: Added the
