--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,12 @@
+Sat Oct 18 05:06:27 2003  Tim Janik  <timj@gtk.org>
+
+	* bsestorage.[hc]: keep track of items stored so far, and of items
+	referenced so far.
+
+	* bseproject.[hcp]*: implemented dependency storing.
+	(bse_project_store_bse): if the item to store is not the project,
+	store all out-of-branch objects it referes to.
+
 Sat Oct 18 04:45:29 2003  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* bsetype.h: Added "scale" hint to Freq param spec. Added LogScale
