--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,7 @@ Overview of Changes in BEAST/BSE 0.5.5:
   BseBalance     - Stereo panorama position module
   ArtsCompressor - Mono and stereo compressor [Stefan Westerfeld]
 * Added utility script to crop and duplicate parts [Stefan Westerfeld]
+* Added "Party Monster" demo song [Stefan Westerfeld]
 * Implemented ability to use sequencer as modulation source
 * Added support for external MIDI events in song tracks
 * Added .bse file playback facility to bsesh
