--- a/po-bse/ChangeLog
+++ b/po-bse/ChangeLog
@@ -1,3 +1,7 @@
+2003-10-19  Christian Neumair  <chris@gnome-de.org>
+
+	* de.po: Added German translation.
+
 2003-10-15  Danilo Šegan  <dsegan@gmx.net>
 
 	* sr.po, sr@Latn.po: Added Serbian translation.
