--- a/po-bse/de.po
+++ b/po-bse/de.po
@@ -3,17 +3,16 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: BSE vUNSPECIFIED\n"
+"Project-Id-Version: BSE 0.55\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2003-10-17 21:42+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"POT-Creation-Date: 2003-10-19 11:26+0200\n"
+"PO-Revision-Date: 2003-10-19 11:25+0200\n"
+"Last-Translator: Christian Neumair <chris@gnome-de.org>\n"
+"Language-Team: German <gnome-de@gnome.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=iso_8859-1\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #: bse/bsebiquadfilter.c:131
@@ -26,79 +25,87 @@ msgstr "Filtertyp"
 
 #: bse/bsebiquadfilter.c:133
 msgid "The filter design type"
-msgstr "Hier erfolgt die Filtertypauswahl"
+msgstr "Der Filtertyp"
 
 #: bse/bsebiquadfilter.c:137 bse/bsebiquadfilter.c:145
 #: bse/bsebiquadfilter.c:152
 msgid "Center Frequency"
-msgstr ""
+msgstr "Frequenz zentrieren"
 
+# CHECK
 #: bse/bsebiquadfilter.c:139
 msgid "Cutoff [Hz]"
-msgstr ""
+msgstr "Abfall [Hz]"
 
 #: bse/bsebiquadfilter.c:147
 msgid "Note"
-msgstr ""
+msgstr "Note"
 
+# CHECK
 #: bse/bsebiquadfilter.c:157 bse/bsebiquadfilter.c:162
 msgid "Emphasis"
-msgstr ""
+msgstr "Gewichtung"
 
+# CHECK
 #: bse/bsebiquadfilter.c:159
 msgid "Gain [dB]"
-msgstr ""
+msgstr "Zuwachs [dB]"
 
 #: bse/bsebiquadfilter.c:164
 msgid "Norm Type"
-msgstr ""
+msgstr "Norm.-Typ"
 
 #: bse/bsebiquadfilter.c:165
 msgid ""
 "The filter gain normalization type (supported only by highpass and lowpass)"
 msgstr ""
+"Der Filterzuwachs-Normalisierungstyp (nur von Hoch- und Tiefpass unterstützt)"
 
 #: bse/bsebiquadfilter.c:170 bse/bsebiquadfilter.c:176
 #: bse/bsebiquadfilter.c:182 bse/bsebiquadfilter.c:188
 msgid "Modulation"
-msgstr ""
+msgstr "Modulation"
 
 #: bse/bsebiquadfilter.c:173
 msgid "Strength of linear frequency modulation"
-msgstr ""
+msgstr "Ausprägung der linearen Frequenzmodulation"
 
 #: bse/bsebiquadfilter.c:179
 msgid "Perform exponential frequency modulation instead of linear"
-msgstr ""
+msgstr "Exponentielle Frequenzmodulation statt linearer durchführen"
 
 #: bse/bsebiquadfilter.c:185
 msgid "Number of octaves to be affected by exponential frequency modulation"
 msgstr ""
+"Anzahl der von der exponentiellen Frequenzmodulation betroffenen Oktaven"
 
-#: bse/bsebiquadfilter.c:190
-msgid "Gain Modulation [%]"
-msgstr ""
-
+# CHECK
 #: bse/bsebiquadfilter.c:191
+#, no-c-format
+msgid "Gain Modulation [%]"
+msgstr "Modulationszuwachs [%]"
+
+# CHECK
+#: bse/bsebiquadfilter.c:192
 msgid "Strength of gain modulation"
-msgstr ""
+msgstr "Ausprägung des Modulationszuwachses"
 
-#: bse/bsebiquadfilter.c:195
+#: bse/bsebiquadfilter.c:196
 msgid "Unfiltered Audio Signal"
-msgstr ""
+msgstr "Ungefiltertes Audio-Signal"
 
-#: bse/bsebiquadfilter.c:197
+#: bse/bsebiquadfilter.c:198
 msgid "Center Frequency Input"
-msgstr ""
+msgstr "Frequenzeingabe zentrieren"
 
-#: bse/bsebiquadfilter.c:199
+#: bse/bsebiquadfilter.c:200
 msgid "Frequency Modulation Input"
-msgstr ""
+msgstr "Frequenzmodulationseingabe"
 
-#: bse/bsebiquadfilter.c:201
+#: bse/bsebiquadfilter.c:202
 msgid "Gain Modulation Input"
-msgstr ""
+msgstr "Modulationszuwachseingabe"
 
-#: bse/bsebiquadfilter.c:203
+#: bse/bsebiquadfilter.c:204
 msgid "Filtered Audio Signal"
-msgstr ""
+msgstr "Gefiltertes Audio-Signal"
