Dutch translation added by Vincent van Adrighem.
2003-10-19   Vincent van Adrighem  <adrighem@gnome.org>

	* nl.po: Dutch translation added by Vincent van Adrighem.

svn path=/trunk/; revision=1421

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-10-19   Vincent van Adrighem  <adrighem@gnome.org>
+
+	* nl.po: Dutch translation added by Vincent van Adrighem.
+
 2003-10-19  Christian Neumair  <chris@gnome-de.org>
 
 	* de.po: Added German translation.
