--- a/NEWS
+++ b/NEWS
@@ -24,6 +24,7 @@ Overview of Changes in BEAST/BSE 0.5.5:
 * Added German translation [Christian Neumair]
 * Added Swedish translation [Christian Rose]
 * Added Serbian translation [Danilo Segan]
+* Added Dutch translation [Vincent van Adrighem]
 * Lots of bug fixes
 
 Overview of Changes in BEAST/BSE 0.5.4:
