--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-10-22   Vincent van Adrighem  <adrighem@gnome.org>
+
+	* nl.po: Dutch translation updated by Vincent van Adrighem.
+
 2003-10-19   Vincent van Adrighem  <adrighem@gnome.org>
 
 	* nl.po: Dutch translation added by Vincent van Adrighem.
