--- a/TODO
+++ b/TODO
@@ -1,16 +1,19 @@
 FIXMES:
+- compressor gui: http://www.samsonwireless.net/store/product.asp?sku=EM.CLX-440&nav=m
+- migrate artscompressor threshold/output to dB (keep compat code)
+- amplifier: audio_balance and ctrl_balance range: -100..+100
+- fix syndrum parameter scale
+- nuke frequency fine-tune for biquad filter
+- introduce Volume() pspec type in idl files that the GUI can provide a dB slider for
+- .desktop file and file manager registration (freedesktop.org) rythmbox has examples on this
+- upon project playback-stop, discard all pending events (at least note-on+note-off) on its midi receiver
+- add warning at the GUI that the rackview widget is still experimental and will break for future BSE files
 - /Demo
 - check button3 /Tools/ menu in piano rool editor
 - check i18n strings for pianoroll GUI elements
 - regitering the same procedure twice trigegrs g_warning()
 - document bse_item_check_is_a(), remove bse_object_is_a() from bse-procs
-- .desktop file and file manager registration (freedesktop.org) rythmbox has examples on this
-- amplifier: audio_balance and ctrl_balance range: -100..+100
 - File/Open should merge if issued on an empty project
-- nuke frequency fine-tune for biquad filter
-- fix syndrum parameter scale
-- introduce Volume() pspec type in idl files that the GUI can provide a dB slider for
-- upon project playback-stop, discard all pending events (at least note-on+note-off) on its midi receiver
 - fix forcing unique names for children of a project 
 - check whether */icons/Makefile.icons is included in dist tarball
 - check whether plugins/Makefile.plugins is included in dist tarball
@@ -26,9 +29,7 @@ FIXMES:
   /Synthesizers/Demo
   alternatively, introduce /Insert/ toplevel menu
 - create ~/beast/instruments ~/beast/effects when saving effect/instrument
-- migrate artscompressor threshold/output to dB (keep compat code)
 - add demo song
-- nuke bsegconfig.[hc]?
 - add new test song containing a wave track
 - default saving (SFI_PARAM_SKIP_DEFAULT)
 - fix non-NULL icons at 0x0, GUI breaks in lots of places for them
