--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Fri Oct 24 22:29:02 2003  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/bstlogadjustment.[hc]: some cleanups, added range checks.
+	(bst_log_adjustment_setup): turn n_steps into a double.
+	emit ::changed and ::value-changed after updating ranges.
+
 Sat Oct 18 05:23:23 2003  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bstmenus.c (bst_menu_config_create_items): fix menu item
