--- a/TODO
+++ b/TODO
@@ -1,12 +1,11 @@
 FIXMES:
-- print info about authors and license of plugins in info window
-- s/copyright/license/ for scripts and plugins
+- remove test.scm
 - compressor gui: http://www.samsonwireless.net/store/product.asp?sku=EM.CLX-440&nav=m
 - migrate artscompressor threshold/output to dB (keep compat code)
+- introduce Volume() pspec type in idl files that the GUI can provide a dB slider for
 - amplifier: audio_balance and ctrl_balance range: -100..+100
 - fix syndrum parameter scale
 - nuke frequency fine-tune for biquad filter
-- introduce Volume() pspec type in idl files that the GUI can provide a dB slider for
 - .desktop file and file manager registration (freedesktop.org) rythmbox has examples on this
 - upon project playback-stop, discard all pending events (at least note-on+note-off) on its midi receiver
 - add warning at the GUI that the rackview widget is still experimental and will break for future BSE files
@@ -32,6 +31,7 @@ FIXMES:
   alternatively, introduce /Insert/ toplevel menu
 - create ~/beast/instruments ~/beast/effects when saving effect/instrument
 - add demo song
+- add author and license information to module types just like we do for procedures
 - add new test song containing a wave track
 - default saving (SFI_PARAM_SKIP_DEFAULT)
 - fix non-NULL icons at 0x0, GUI breaks in lots of places for them
@@ -127,6 +127,7 @@ Stefan Gui TODOs (priorities: 9=high, 0=low):
 
 TODO:
 - virtual MIDI keyboard
+- fix tracks used only as modulation input (party-monster.bse)
 - delay class destruction and plugin unloading through async handlers (slight timeout)
 - piano and track roll scrolling implemented with secondary scrollbar
 - piano roll dialog gains partlink property editor
