--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sat Oct 25 01:49:50 2003  Tim Janik  <timj@gtk.org>
+
+        * *.*: changed "copyright" field of procedures, scripts and objects
+        into a "license" field which better reflects what we're asking for.
+
 Fri Oct 24 22:29:02 2003  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bstlogadjustment.[hc]: some cleanups, added range checks.
