--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,10 @@
+Sat Oct 25 02:05:14 2003  Tim Janik  <timj@gtk.org>
+
+	* bsebiquadfilter.[hc]: nuked frequency fine-tune setting which was
+	rather pointless.
+
+	* bseamplifier.idl: fix compat balance ranges.
+
 Sat Oct 25 01:49:50 2003  Tim Janik  <timj@gtk.org>
 
 	* *.*: changed "copyright" field of procedures, scripts and objects
