--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sat Oct 25 02:16:35 2003  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/bstrackeditor.c (bst_rack_editor_init): added warning
+	about rack editor instabilities.
+
 Sat Oct 25 01:58:24 2003  Tim Janik  <timj@gtk.org>
 
 	* library/scripts/test.scm: removed.
