implement sfi_rstore_quick_scan() to scan lisp syntax for a specific
Sat Oct 25 17:28:02 2003  Tim Janik  <timj@gtk.org>

        * sfistore.[hc]: implement sfi_rstore_quick_scan() to scan lisp syntax
        for a specific statement.

svn path=/trunk/; revision=1448

--- a/sfi/ChangeLog
+++ b/sfi/ChangeLog
@@ -1,3 +1,8 @@
+Sat Oct 25 17:28:02 2003  Tim Janik  <timj@gtk.org>
+
+	* sfistore.[hc]: implement sfi_rstore_quick_scan() to scan lisp syntax
+	for a specific statement.
+
 Sat Oct 25 01:49:50 2003  Tim Janik  <timj@gtk.org>
 
         * *.*: changed "copyright" field of procedures, scripts and objects
