--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,7 @@
+Sat Oct 25 17:30:21 2003  Tim Janik  <timj@gtk.org>
+
+	* bsesuper.c: introduce copyright compat property.
+
 Sat Oct 25 02:05:14 2003  Tim Janik  <timj@gtk.org>
 
 	* bsebiquadfilter.[hc]: nuked frequency fine-tune setting which was
