--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,8 @@
+Sun Oct 26 09:38:12 2003  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* bserecords.idl: Using // within a string now works (no longer
+	treated as C++ comment start by sfidl).
+
 Sat Oct 25 17:30:21 2003  Tim Janik  <timj@gtk.org>
 
 	* bsesuper.c: introduce copyright compat property.
